# pico-gpu

./: .clang-format  .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yml
air/: folder.cuh
chips/: selectors_on_coset.hpp
chips/include/: add_sub.hpp  alu_base.hpp  alu_ext.hpp  batch_fri.hpp  bitwise.hpp  byte.hpp  cpu.hpp  curve_op.hpp  curves.hpp  divrem.hpp  edwards_op.hpp  exp_bits.hpp  field_bit_decomposition.hpp  field_params.hpp  field_word_range_checker.hpp  fp2_op.hpp  fp_lt.hpp  fp_op.hpp  global_accumulation.hpp  global_interaction.hpp  global_lookup.hpp  instruction.hpp  is_equal_word.hpp  is_zero.hpp  is_zero_word.hpp  keccak_consts.hpp  keccak_permute.hpp  keccak_populate.hpp  keccak_round.hpp  lt.hpp  lt_gadgets.hpp  memory_initialize_finalize.hpp  memory_read_write.hpp  mul.hpp  poseidon2.hpp  precompile_ed_add_ed25519.hpp  precompile_ed_decompress.hpp  precompile_fp2_add_sub_bls12381.hpp  precompile_fp2_add_sub_bn254.hpp  precompile_fp2_mul_bls12381.hpp  (+36 more)
ff/: bb31_septic_extension_t.hpp  bb31_t.hpp  ff_config.hpp  kb31_extension_t.hpp  kb31_septic_extension_t.hpp  kb31_t.hpp
matrix/: type.cuh
poseidon2/: constants.cuh  kernels.cuh  round_constants.cuh
poseidon2/constants/: babybear_poseidon2.h  koalabear_poseidon2.h
quotient/: jit_compiler.cu  jit_compiler.cuh  jit_template.cuh  quotient_eval.cuh  quotient_jit.cu  quotient_types.cuh
quotient/cache/: v3_AddSub_70e2359f84088e8a.cubin  (+20 more)
rust/: Cargo.toml  build.rs
transpose/: transpose.cu
util/: device_ptr.hpp  exception.cuh  exception.hpp  rusterror.h
